fixed order of line chart so that overlapping charts are ordered by closing price and made stockticker updates easier to see

--- a/public/style.css
+++ b/public/style.css
@@ -117,8 +117,13 @@ footer {
 	border: none;
 	transition: background-color .3s;
 }
+.changed {
+  border: 1px dashed #ff4081;
+  border-radius: 3px;
+}
 
 #stocklist {
+  z-index: 1;
   display: flex;
   justify-content: space-around;
 }
@@ -134,7 +139,7 @@ header {
   position: fixed;
   top: 0;
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.95);
 }
 .headercard > h1 {
   color: #fff;
@@ -158,4 +163,11 @@ header {
 .green {
 	font-weight: bolder;
 	color: green;
+}
+.price {
+  box-sizing: content-box;
+  width: 200px;
+}
+.price-item {
+  margin-right: 5px;
 }
